--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "digital";
+  src: url("digital-7.regular.ttf") format("truetype");
+}
+
 body {
   margin: 0;
   display: flex;
@@ -8,23 +13,58 @@ body {
   background: linear-gradient(45deg, #ef5777, #ffd32a, #0be881);
 }
 
-.App {
-  display: flex;
-  flex-direction: column;
+#root {
+  width: 90vw;
+  height: 90vh;
+}
+
+/* The app */
+#drum-machine {
+  display: grid;
+  grid-template-columns: 30% 40% 30%;
+  grid-template-rows: 1fr 4fr;
+  grid-row-gap: 20px;
+  grid-template-areas: "none display options" "buttons buttons buttons";
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  background-color: #485460;
   text-align: center;
-  justify-content: center;
+  justify-items: center;
   align-items: center;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
 
-#drum-machine {
-  width: 90vw;
-  height: 90vh;
-  background-color: #485460;
+#display {
+  grid-area: display;
+  width: 90%;
+  background-color: #1c2733;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  padding: 10px;
+  border: 2px solid #c8d6e5;
+  border-radius: 5px;
+}
+
+#options {
+  grid-area: options;
+  background-color: #2c3e50;
+  justify-self: end;
+  align-self: start;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+#options:hover {
+  cursor: pointer;
+  background-color: #7f8c8d;
+}
+
+#optionsdropdown {
+  grid-area: options;
 }
 
 /* wraps all buttons */
 #db-wrapper {
+  grid-area: buttons;
   display: flex;
   width: 90%;
   flex-wrap: wrap;
@@ -85,5 +125,72 @@ body {
 
 #display-text {
   font-size: 40px;
-  color: white;
+  font-family: digital;
+  color: #e74c3c;
+}
+
+button {
+  cursor: pointer;
+}
+
+/* round slider from https://www.w3schools.com/howto/howto_css_switch.asp */
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #2196f3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
