--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,7 @@ body {
   width: 100%;
   height: 100%;
   background: #0be881;
+  font-size: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
