--- a/src/App.css
+++ b/src/App.css
@@ -22,10 +22,11 @@ body {
 /* The app */
 #drum-machine {
   display: grid;
+  position: relative;
   grid-template-columns: 30% 40% 30%;
   grid-template-rows: 1fr 4fr;
   grid-row-gap: 20px;
-  grid-template-areas: "none display options" "buttons buttons buttons";
+  grid-template-areas: "none displayarea options" "buttons buttons buttons";
   width: 100%;
   height: 100%;
   border-radius: 5px;
@@ -37,7 +38,7 @@ body {
 }
 
 #display {
-  grid-area: display;
+  grid-area: displayarea;
   width: 90%;
   background-color: #1c2733;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -135,6 +136,30 @@ button {
   cursor: pointer;
 }
 
+@media (max-width: 1300px) {
+  #optionsdropdown {
+    position: absolute;
+    grid-column: full;
+  }
+
+  #display {
+    grid-column-start: none;
+    grid-column-end: displayarea;
+    margin: 10px 0 0 10%;
+    height: 70%;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (max-width: 400px) {
+  #display-text {
+    font-size: 30px;
+  }
+}
+
 /* round slider from https://www.w3schools.com/howto/howto_css_switch.asp */
 /* The switch - the box around the slider */
 .switch {
@@ -142,6 +167,7 @@ button {
   display: inline-block;
   width: 60px;
   height: 34px;
+  margin: 0 5px;
 }
 
 /* Hide default HTML checkbox */
