--- a/src/App.css
+++ b/src/App.css
@@ -80,24 +80,23 @@ body {
   align-items: center;
 }
 
-/* The button container */
-.drum-button {
+/* The actual button */
+.drum-pad {
   width: 90%;
   height: 70px;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
-  margin: 15px 15px 15px 15px;
-  border-radius: 10px;
-}
-
-/* The actual button */
-.drum-pad {
-  width: 100%;
-  height: 100%;
+  margin: 15px;
   border-radius: 10px;
   border: none;
   padding: 0;
   background: #009432;
   outline-offset: 4px;
+}
+
+@media (max-width: 768px) {
+  .drum-pad {
+    margin: 10px 5px;
+  }
 }
 
 .drum-pad:focus:not(:focus-visible) {
